Generate Xml
